--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "@remix-run/serve": "^2.7.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "isbot": "^4.4.0",
+    "lucide-react": "^0.453.0",
     "mongoose": "^8.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.7.1",
