--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "prettier": {},
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@remix-run/css-bundle": "^2.7.1",
     "@remix-run/node": "^2.4.1",
     "@remix-run/react": "^2.7.1",
@@ -20,6 +21,8 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "command": "^0.0.5",
     "isbot": "^4.4.0",
     "lucide-react": "^0.453.0",
     "mongoose": "^8.7.1",
