--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 MONGODB_URL=mongodb+srv://username:password@clustername.subdomain.mongodb.net/databasename
+FIREBASE_PROJECT_ID=your-firebase-project-id
