--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "mongoose": "^8.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-auth": "^3.7.0",
+    "remix-toast": "^1.2.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
