Add basic auth setup + profile + login + signup routes

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 MONGODB_URL=mongodb+srv://username:password@clustername.subdomain.mongodb.net/databasename
 FIREBASE_PROJECT_ID=your-firebase-project-id
+SESSION_SECRET=secret
+ADMIN_SIGNUP_CODE=admin-code
