--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ MONGODB_URL=mongodb+srv://username:password@clustername.subdomain.mongodb.net/da
 FIREBASE_PROJECT_ID=your-firebase-project-id
 SESSION_SECRET=secret
 ADMIN_SIGNUP_CODE=admin-code
+CLOUD_NAME=cloud name here
+API_KEY= api key here
+API_SECRET= api secret here
