--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
   "prettier": {},
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@remix-run/css-bundle": "^2.7.1",
     "@remix-run/node": "^2.4.1",
     "@remix-run/react": "^2.7.1",
@@ -20,13 +27,16 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "command": "^0.0.5",
+    "date-fns": "^3.6.0",
     "isbot": "^4.4.0",
     "lucide-react": "^0.453.0",
     "mongoose": "^8.7.1",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
