--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "prettier": {},
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -35,8 +36,10 @@
     "command": "^0.0.5",
     "date-fns": "^3.6.0",
     "isbot": "^4.4.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mongoose": "^8.7.1",
+    "nodemailer": "^6.9.16",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
@@ -45,7 +48,8 @@
     "remix-toast": "^1.2.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.7.1",
