Update .env example, add base url

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ CLOUDINARY_API_KEY=key
 CLOUDINARY_API_SECRET=secret
 GMAIL_EMAIL=...gmail.com
 GMAIL_APP_PW=app-password
-domain="localhost:3000"
+BASE_URL="localhost:3000"
 JWT_SECRET=secret
