--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@remix-run/css-bundle": "^2.7.1",
@@ -40,14 +42,18 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mongoose": "^8.7.1",
+    "next-themes": "^0.4.3",
     "nodemailer": "^6.9.16",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.13.3",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
     "remix-toast": "^1.2.2",
-    "sonner": "^1.5.0",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3"
