--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mongoose": "^8.7.1",
+    "motion": "^11.13.1",
     "next-themes": "^0.4.3",
     "nodemailer": "^6.9.16",
     "react": "^18.2.0",
@@ -56,6 +57,7 @@
     "remix-toast": "^1.2.2",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3"
   },
