--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "motion": "^11.13.1",
     "next-themes": "^0.4.3",
     "nodemailer": "^6.9.16",
+    "openai": "^4.76.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
