--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "smask",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -30,6 +30,8 @@
     "@remix-run/node": "^2.4.1",
     "@remix-run/react": "^2.7.1",
     "@remix-run/serve": "^2.7.1",
+    "@remix-run/vercel": "^1.19.3",
+    "@vercel/remix": "^2.15.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
