--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MONGODB_URL=mongodb+srv://username:password@clustername.subdomain.mongodb.net/databasename
+MONGODB_URI=mongodb+srv://username:password@clustername.subdomain.mongodb.net/databasename
 FIREBASE_PROJECT_ID=your-firebase-project-id
 SESSION_SECRET=secret
 ADMIN_SIGNUP_CODE=admin-code
