Install html-escaper

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "command": "^0.0.5",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
+    "html-escaper": "^3.0.3",
     "isbot": "^4.4.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
