--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
     "remix-toast": "^1.2.2",
+    "resend": "^4.0.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
